--- a/gateway-server/build.gradle
+++ b/gateway-server/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+
 	implementation 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
