--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
     name: gateway-server
   profiles:
     active: local
+  data:
+    redis:
+      host: localhost
+      port: 6379
   cloud:
     gateway:
       default-filters:
@@ -43,10 +47,10 @@ spring:
         - id: user-service
           uri: http://localhost:8080/
           predicates:
-            - Path=/user-service/api/v1/users/reissue
+            - Path=/user-service/api/v1/users/{userId}/reissue
             - Method=GET
           filters:
-            - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+            - RewritePath=/user-service/api/v1/users/(?<userId>.*)/reissue, /api/v1/users/$\{userId}/reissue
 
         - id: user-service
           uri: http://localhost:8080/
