--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -33,6 +33,11 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
+//    implementation 'org.springframework.boot:spring-boot-starter-aop'
+//	implementation 'io.github.resilience4j:resilience4j-all'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
 	compileOnly 'org.projectlombok:lombok'
