feat#27 : 특정 시간에 특정 상품이 구매 가능하도록 구현

--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -26,3 +26,13 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans, busrefresh, circuitbreakers
+
+schedule:
+  start-time: ${start-time}
+  cron: ${cron}
