--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -42,7 +42,13 @@ spring:
     redis:
       host: localhost
       port: 6379
-      
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: info, refresh, health, beans, busrefresh, circuitbreakers
+
 # OTP TTL 시간 
 redis:
   ttl: ${otp-ttl}
