feat#27: 분산락 테스트 및 구현

--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -32,8 +32,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+	implementation 'org.redisson:redisson-spring-boot-starter:3.29.0'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
