--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -40,3 +40,7 @@ management:
 schedule:
   start-time: ${start-time}
   cron: ${cron}
+
+logging:
+  level:
+    com.bootakhae.productservice: DEBUG
