ref#33 : 스케줄 서비스 분리 및 테스트

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
     password: ${password}
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
@@ -71,7 +71,7 @@ resilience4j.circuitbreaker:
         register-health-indicator: true # open / close 여부를 체크
 
         ignore-exceptions:
-          - com.bootakhae.orderservice.global.exception.QtyLackException
+          - com.bootakhae.orderservice.global.exception.ClientException
 
 #        record-exceptions:
 #          - java.io.IOException
