--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+	testImplementation 'org.springframework.amqp:spring-rabbit-test'
 
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
