--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -39,23 +39,25 @@ management:
 
 # CircuitBreaker 설정
 resilience4j.circuitbreaker:
-    instances:
-      cb-case:
-        base-config: default
+#  circuit-breaker-aspect-order: 1 # 우선순위
+  instances:
+#      Test 용 설정
+#      cb-case:
+#        base-config: default
       default-CB:
         base-config: default
-    configs:
+  configs:
       default:
         # sliding window
         sliding-window-type: count_based # Sliding Window 타입 : 횟수 or 시간
-        sliding-window-size: 10 # Sliding Window Size : 총 10개를 기준으로 집계 수행
+        sliding-window-size: 100 # Sliding Window Size : 총 10개를 기준으로 집계 수행
 
         # fail
-        failure-rate-threshold: 20 # 임계치 : sliding window size 가 10인 경우, 10개 중 1갬만 fail 이 발생해도, 임계치 이상 fail 발생으로 인해 CircuitBreaker 가 open 됩니다.
-        minimum-number-of-calls: 5 # 10개를 굳이 채우지 않더라도, 최소 5회 요청 집계 후 임계치 이상일 경우, CircuitBreaker 를 Open 해주는 설정.
+        failure-rate-threshold: 20 # 실패율 임계치(rate) : 값 이상의 비율로 fail 시 CircuitBreaker Open.
+        minimum-number-of-calls: 50 # 최소 집계 횟수 : 최소 5회 요청 집계 후 임계치 이상일 경우, CircuitBreaker 를 Open.
 
         # delay
-        slow-call-rate-threshold: 10 # Circuit Open 지연 비율 설정, 지연수 / 슬라이딩 윈도우 크기, 10% 임계치 설정
+        slow-call-rate-threshold: 10 # 느림응답 임계치 : Circuit Open 지연 비율 설정.
         slow-call-duration-threshold: 3000ms #3초 이상 지연 시, 지연 요청
 
         # half open
@@ -69,17 +71,21 @@ resilience4j.circuitbreaker:
 
         # actuator 설정
         register-health-indicator: true # open / close 여부를 체크
+        
+        # fail 처리 예외 리스트 설정
+        record-exceptions:
+          - feign.RetryableException
+          - java.io.IOException
+          - java.util.concurrent.TimeoutException
+          - org.springframework.web.client.HttpServerErrorException
+          - com.bootakhae.orderservice.global.exception.ServerException
 
-        ignore-exceptions:
-          - com.bootakhae.orderservice.global.exception.ClientException
-
-#        record-exceptions:
-#          - java.io.IOException
-#          - java.util.concurrent.TimeoutException
-#          - org.springframework.web.client.HttpServerErrorException
+#        ignore-exceptions: # 무시할 예외 목록
+#          - com.bootakhae.orderservice.global.exception.ClientException
 
 # Retry 설정
 resilience4j.retry:
+#  retry-aspect-order: 2 # 우선순위
   instances:
     rt-case:
       base-config: default
@@ -89,7 +95,7 @@ resilience4j.retry:
     default:
       max-attempts: 3
       wait-duration: 500ms
-
+      
 
 schedule:
   cron: ${cron}
