fix#43: refresh-token 관련 Redis 데이터 타입 변경 Hash -> String

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -47,7 +47,10 @@ management:
 
 # OTP TTL 시간 
 redis:
-  ttl: ${otp-ttl}
+  otp:
+    ttl: ${otp-ttl}
+  refresh-token:
+    ttl: ${refresh-token-ttl}
 
 logging:
   level:
