--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -88,7 +88,7 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/order-service/(?<segment>.*), /$\{segment}
-#            - name: AuthorizationHeaderFilter # 테스트 시 주석처리
+            - name: AuthorizationHeaderFilter # 테스트 시 주석처리
 
           # actuator
         - id: product-service
@@ -108,8 +108,8 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/product-service/(?<segment>.*), /$\{segment}
-#            - name: AuthorizationHeaderFilter
-#            - name: AdminAccessFilter
+            - name: AdminAccessFilter # 테스트 시 주석처리
+            - name: AuthorizationHeaderFilter # 테스트 시 주석처리
 
         # product-service 공통
         - id: product-service
@@ -119,7 +119,7 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/product-service/(?<segment>.*), /$\{segment}
-#            - name: AuthorizationHeaderFilter # 테스트 시 주석처리
+            - name: AuthorizationHeaderFilter # 테스트 시 주석처리
 
         # actuator
         - id: pay-service
@@ -138,7 +138,7 @@ spring:
           filters:
             - RemoveRequestHeader=Cookie
             - RewritePath=/pay-service/(?<segment>.*), /$\{segment}
-#            - name: AuthorizationHeaderFilter # 테스트 시 주석처리
+            - name: AuthorizationHeaderFilter # 테스트 시 주석처리
 
 logging:
   level:
