--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
-//    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
 //	implementation 'io.github.resilience4j:resilience4j-all'
 
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
