--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -28,10 +28,10 @@ spring:
         use_sql_comments: true
 #    defer-datasource-initialization: true
 #    generate-ddl: true
-#  data:
-#    redis:
-#      host: localhost
-#      port: 6379
+  data:
+    redis:
+      host: localhost
+      port: 6379
 #  sql:
 #    init:
 #      mode: always
