feat#49 config-server 테스트 및 JWT 관련 설정 중앙집중화

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -2,6 +2,13 @@ server:
   port: 8888
 spring:
   application:
-    name: config-service
-
-# config server ????
+    name: config-server
+  cloud:
+    config:
+      server:
+        git:
+          uri: file:///C:\project\bootakhae-config-repo
+#          default-label: main
+#          password:
+#          username:
+# config server 설정
