--- a/schedule-service/src/main/resources/application.yml
+++ b/schedule-service/src/main/resources/application.yml
@@ -11,20 +11,12 @@ eureka:
 spring:
   application:
     name: schedule-service
-  profiles:
-    active: local
   rabbitmq:
     host: localhost
-    username : ${rabbitmq.username_}
-    password : ${rabbitmq.password}
+    username : ENC(8oJUD3uwf3tKu94HcUVoyA==)
+    password : ENC(uBhF9QBlK/ZIZeJet1x7BIC5CJM3LjyX)
     port: 5672
 
 logging:
   level:
     com.bootakhae.scheduleservice: DEBUG
-
-schedule:
-  order:
-    cron: ${order.cron}
-  product:
-    cron: ${product.cron}
