fix#55 : application.yml 정리

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 8888 # 공식문서 명시
 spring:
+  config:
+    import: classpath:application-secret.yml
   application:
     name: config-server
   cloud:
