--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -1,45 +1,3 @@
-server:
-  port: 8082
-
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-
 spring:
-  application:
-    name: product-service
-  datasource:
-    url: jdbc:mariadb://localhost:13306/mydb
-    driver-class-name: org.mariadb.jdbc.Driver
-    username: ENC(oFb0MbP+j+8aeEB+lkq5Xw==)
-    password: ENC(vYP/u6qLkoNEI40qTEju6kGIpzWZFtuT)
-  jpa:
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-        use_sql_comments: true
-#    defer-datasource-initialization: true
-#    generate-ddl: true
-  data:
-    redis:
-      host: localhost
-      port: 6379
-#  sql:
-#    init:
-#      mode: always
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: info, refresh, health, beans, busrefresh, circuitbreakers
-
-logging:
-  level:
-    com.bootakhae.productservice: DEBUG
+  profiles:
+    active: local
